разметка гл.стр.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+	    <title>Sedona</title>
+    </head>
+    <body>
+        <!--HEADER-->
+        <header class="main-header">
+	        <nav class="left-nav">
+		        <ul>
+	                 <li>
+			            <a href="#" class="btn">Информация</a>
+		             </li>
+			        <li>
+			            <a href="#" class="btn">Фото и видео</a>
+		            </li>
+			          
+		        </ul>
+	        </nav>
+			
+	        <div class="image">
+	            <a href="./index.html">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+				</a>
+	        </div>
+			
+			<nav class="right-nav">
+			    <ul>
+					<li>
+			            <a href="#" class="btn">Карта штата</a>
+		            </li>
+			        <li>
+			            <a href="#" class="btn">Гостиницы</a>
+			        </li>  
+			    </ul>
+			</nav>
+	    </header>
+	    <!--HEADER END-->
+		
+		<!--CONTENT-->
+	    <div class="container clearfix">
+	        <section class="info-sedona">
+	            <h3>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+		        <p>Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
+	        </section>
+	        <!--Вопросы по тексту, лежащем на лого-->
+	        <article class="main-reasons">
+	            <div class="features-item main-feature">
+		            <h3>Настоящий городок</h3>
+		            <p>- №1-</p>
+		            <p>
+		            Седона не атракцион для туристов,<br>
+		            там течет своя жизнь</p>
+		        </div>
+		        <div class="reason-image">
+		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		        </div>
+	        </article>
+	        <section class="features">
+	            <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Жилье</h3>
+		            <p>Рекомендуем пожить в настоящем<br>
+		            мотеле, все как в кино!</p>
+		        </div>
+		        <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Еда</h3>
+		            <p>Всегда заказывай фирменный бургер,<br>
+		            вы не разочаруетесь!</p>
+		        </div>
+		        <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Сувениры</h3>
+		            <p>Не только китайского,<br>
+		            но и местного производства!</p>
+		        </div>
+	        </section>
+	        <article class="main-reasons">
+	            <div class="features-item main-feature">
+		        <h3>Там есть мост дьявола</h3>
+		        <p>- №2-</p>
+		        <p>
+		        Да, по нему можно пройти!<br>
+		        если конечно вы осмелитесь</p>
+		        </div>
+		        <div class="reason-image">
+		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		        </div>
+	        </article>
+	        <section class="features">
+	            <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Небольшая площадь</h3>
+		            <p>- №3-</p>
+		            <p>
+		            Все достопримеча-<br>
+		            тельности находятся очень близко</p>
+		        </div>
+		        <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Красивая дорога</h3>
+		            <p>- №4-</p>
+		            <p>
+		            Eхать в Седону из Лас-Вегаса совсем<br>
+		            не скучно!</p>
+		        </div>
+		        <div class="features-item">
+				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <h3>Мало туристов</h3>
+		            <p>- №5-</p>
+		            <p>
+		            Большинство едет в Гранд-каньон и<br>
+		            толпится там</p>
+		        </div>
+	        </section>
+			<!--CART-->
+	        <section class="search">
+	            <h2>Заинтересовались?</h2>
+	            <p>Укажите предполагаемые даты поездки<br>
+	            и мы вам покажем лучшие предложения гостиниц в Седоне</p>
+	            <a href="#" class="btn">Поиск гостиницы в Седоне</a>
+	            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+	        </section>
+			<!--CART END-->
+	    </div>
+		<!--CONTENT END-->
+		
+        <!--FOOTER-->
+	    <footer class="main-footer">
+	        <section class="main-footer-info">
+	            <div class="footer-tag">
+		            #VISITSEDONA
+		        </div>
+		        <div class="footer-social">
+		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		        </div>
+		        <div class="footer-copyright">
+		            Website by <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
+		        </div>
+	        </section>
+	    </footer>
+	    <!--FOOTER END-->
+    </body>
 </html>
