правки в разметку index.html

--- a/index.html
+++ b/index.html
@@ -1,148 +1,128 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-	    <title>Sedona</title>
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Sedona</title>
+</head>
+
+<body>
+    <div class="container">
         <!--HEADER-->
-        <header class="main-header">
-	        <nav class="left-nav">
-		        <ul>
-	                 <li>
-			            <a href="#" class="btn">Информация</a>
-		             </li>
-			        <li>
-			            <a href="#" class="btn">Фото и видео</a>
-		            </li>
-			          
-		        </ul>
-	        </nav>
-			
-	        <div class="image">
-	            <a href="./index.html">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-				</a>
-	        </div>
-			
-			<nav class="right-nav">
-			    <ul>
-					<li>
-			            <a href="#" class="btn">Карта штата</a>
-		            </li>
-			        <li>
-			            <a href="#" class="btn">Гостиницы</a>
-			        </li>  
-			    </ul>
-			</nav>
-	    </header>
-	    <!--HEADER END-->
-		
-		<!--CONTENT-->
-	    <div class="container clearfix">
-	        <section class="info-sedona">
-	            <h3>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-		        <p>Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
-	        </section>
-	        <!--Вопросы по тексту, лежащем на лого-->
-	        <article class="main-reasons">
-	            <div class="features-item main-feature">
-		            <h3>Настоящий городок</h3>
-		            <p>- №1-</p>
-		            <p>
-		            Седона не атракцион для туристов,<br>
-		            там течет своя жизнь</p>
-		        </div>
-		        <div class="reason-image">
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-	        </article>
-	        <section class="features">
-	            <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Жилье</h3>
-		            <p>Рекомендуем пожить в настоящем<br>
-		            мотеле, все как в кино!</p>
-		        </div>
-		        <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Еда</h3>
-		            <p>Всегда заказывай фирменный бургер,<br>
-		            вы не разочаруетесь!</p>
-		        </div>
-		        <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Сувениры</h3>
-		            <p>Не только китайского,<br>
-		            но и местного производства!</p>
-		        </div>
-	        </section>
-	        <article class="main-reasons">
-	            <div class="features-item main-feature">
-		        <h3>Там есть мост дьявола</h3>
-		        <p>- №2-</p>
-		        <p>
-		        Да, по нему можно пройти!<br>
-		        если конечно вы осмелитесь</p>
-		        </div>
-		        <div class="reason-image">
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-	        </article>
-	        <section class="features">
-	            <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Небольшая площадь</h3>
-		            <p>- №3-</p>
-		            <p>
-		            Все достопримеча-<br>
-		            тельности находятся очень близко</p>
-		        </div>
-		        <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Красивая дорога</h3>
-		            <p>- №4-</p>
-		            <p>
-		            Eхать в Седону из Лас-Вегаса совсем<br>
-		            не скучно!</p>
-		        </div>
-		        <div class="features-item">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <h3>Мало туристов</h3>
-		            <p>- №5-</p>
-		            <p>
-		            Большинство едет в Гранд-каньон и<br>
-		            толпится там</p>
-		        </div>
-	        </section>
-			<!--CART-->
-	        <section class="search">
-	            <h2>Заинтересовались?</h2>
-	            <p>Укажите предполагаемые даты поездки<br>
-	            и мы вам покажем лучшие предложения гостиниц в Седоне</p>
-	            <a href="#" class="btn">Поиск гостиницы в Седоне</a>
-	            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-	        </section>
-			<!--CART END-->
-	    </div>
-		<!--CONTENT END-->
-		
+
+        <header class="page-header">
+            <a class="image" href="./index.html">
+                <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+            </a>
+
+            <nav class="main-nav">
+                <ul>
+                    <li>
+                        <a href="#" class="btn">Информация</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn">Фото и видео</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="btn">Карта штата</a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn">Гостиницы</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <!--HEADER END-->
+
+        <!--CONTENT-->
+        <main>
+
+            <section class="info-sedona">
+                <h3>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
+                <p>Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
+            </section>
+            <!--Вопросы по тексту, лежащем на лого-->
+            <section class="main-reasons">
+                <div class="reason-item reason-item-blue"> 
+                    <h3>Настоящий городок</h3>
+                    <span>- №1-</span>
+                    <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+                </div>
+                <div class="reason-image">
+                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                </div>
+            </section>
+            <section class="features">
+                <div class="features-item features-item-home">
+                    <h3>Жилье</h3>
+                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </div>
+                <div class="features-item features-item-eate">
+                    <h3>Еда</h3>
+                    <p>Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
+                </div>
+                <div class="features-item features-item-syvin">
+                    <h3>Сувениры</h3>
+                    <p>Не только китайского, но и местного производства!</p>
+                </div>
+            </section>
+            <section class="main-reasons">
+                <div class="reason-item reason-item-blue">
+                    <h3>Там есть мост дьявола</h3>
+                    <span>- №2-</span>
+                    <p>Да, по нему можно пройти! если конечно вы осмелитесь</p>
+                </div>
+                <div class="reason-image">
+                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                </div>
+            </section>
+            <section class="features">
+                <div class="reason-item reason-item-grey">
+                    <h3>Небольшая площадь</h3>
+                    <span>- №3-</span>
+                    <p>Все достопримеча- тельности находятся очень близко</p>
+                </div>
+                <div class="reason-item reason-item-grey">
+                    <h3>Красивая дорога</h3>
+                    <span>- №4-</span>
+                    <p>Eхать в Седону из Лас-Вегаса совсем не скучно!</p>
+                </div>
+                <div class="reason-item reason-item-grey">
+                    <h3>Мало туристов</h3>
+                    <span>- №5-</span>
+                    <p>Большинство едет в Гранд-каньон и толпится там</p>
+                </div>
+            </section>
+            <!--map-->
+            <section class="search">
+                <h2>Заинтересовались?</h2>
+                <p>Укажите предполагаемые даты поездки и мы вам покажем лучшие предложения гостиниц в Седоне</p>
+                <a href="#" class="btn">Поиск гостиницы в Седоне</a>
+                <div class="map"></div>
+                <!---вставить форму поиска---->
+            </section>
+            <!--map END-->
+        </main>
+        <!--CONTENT END-->
+
         <!--FOOTER-->
-	    <footer class="main-footer">
-	        <section class="main-footer-info">
-	            <div class="footer-tag">
-		            #VISITSEDONA
-		        </div>
-		        <div class="footer-social">
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-		        <div class="footer-copyright">
-		            Website by <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-	        </section>
-	    </footer>
-	    <!--FOOTER END-->
-    </body>
+        <footer class="page-footer">
+                <div class="footer-tag">
+                    #VISITSEDONA
+                </div>
+                <div class="footer-social">
+                    <a class="socil-btn socil-btn-tw" href="#" target="_blank">Твитер</a>
+                    <a class="socil-btn socil-btn-fb" href="#" target="_blank">Фейсбук</a>
+                    <a class="socil-btn socil-btn-youtub" href="#" target="_blank">Ютьюб</a>
+                </div>
+                <div class="footer-copyright">
+                    Website by <a href="#" target="_blank"><img src="http://placehold.it/150x100" alt="Седона" width="150" height="100"></a>
+                </div>
+        </footer>
+        <!--FOOTER END-->
+    </div>
+
+</body>
+
 </html>
