разметка стр. поиска отеля

--- a/hotels.html
+++ b/hotels.html
@@ -1,196 +1,167 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-	    <title>Гостиница</title>
-    </head>
-    <body>
-        <!--HEADER-->
-        <header class="main-header">
-	        <nav class="left-nav">
-		        <ul>
-	                 <li>
-			            <a href="#" class="btn">Информация</a>
-		             </li>
-			        <li>
-			            <a href="#" class="btn">Фото и видео</a>
-		            </li>
-			          
-		        </ul>
-	        </nav>
-			
-	        <div class="image">
-	            <a href="./index.html">
-				    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-				</a>
-	        </div>
-			
-			<nav class="right-nav">
-			    <ul>
-					<li>
-			            <a href="#" class="btn">Карта штата</a>
-		            </li>
-			        <li>
-			            <a href="#" class="btn">Гостиницы</a>
-			        </li>  
-			    </ul>
-			</nav>
-	    </header>
-	    <!--HEADER END-->
-	
-	    <div class="container clearfix">
-	        <section class="filter-window">
-	            <div class="infrastructure">
-		            <h3>Инфраструктура</h3>
-			            <ul>
-							<li>
-		                        <input type="checkbox" name="pool" id="pool" checked>
-								<label for="pool" >Бассейн</label><br>
-							</li>
-							<li>
-		                        <input type="checkbox" name="parking" id="parking">
-								<label for="parking">Парковка</label><br>
-					        </li>
-							<li>
-		                        <input type="checkbox" name="wifi" id="wifi">
-								<label for="wifi">Wi-fi</label><br>
-							</li>
-						</ul>
-		        </div>
-		    	<div class="type-of-property">
-		        	<h3>Тип жилья</h3>
-				    	<ul>
-							<li>
-		                        <input type="checkbox" name="inn" id="inn" checked>
-								<label for="inn">Гостиница</label><br>
-							</li>
-							<li>
-		                        <input type="checkbox" name="motel" id="motel" checked>
-								<label for="motel" >Мотель</label><br>
-					        </li>
-							<li>
-		                        <input type="checkbox" name="apartaments" id="apartaments" checked>
-								<label for="apartaments">Апартаменты</label><br>
-							</li>
-						</ul>    
-		    	</div>
-		    	<div class="filter-cost">
-		        	<h3>Стоимость в сутки (р)</h3>
-		        	<div class="cost">
-		            	<div class="left-cost">
-							от 0
-						</div>
-						<div class="right-cost">
-							до 3000
-						</div>
-						<div class="bottom-button">
-						<a href="#" class="btn">Показать</a>
-						</div>
-					</div>
-				</div>
-	    	</section>
-	  		<section class="options">
-	    		<div class="count">
-	        	    <b>Найдено: 3</b>
-				</div>
-				<div class="sort">
-	    		    <h4>Сортировка:<h4>
-				        <ul>
-							<li>
-		                        <a href="#">По цене</a>
-							</li>
-							<li>
-		                        <a href="#">По типу</a>
-					        </li>
-							<li>
-		                        <a href="#">По рейтингу</a>
-							</li>
-				        </ul> 
-	            </div>
-	            <div class="arrows">
-	            стрелочки :)
-	            </div>
-	        </section><hr>
-			<!--ITEM-->
-	        <article class="result-item">
-	            <section class="result-info">
-		            <div class="item-info">
-		                <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		                <h2>Amara Resort & Spa</h2>
-		                <p>Гостиница     От 3500 р.</p>
-			            <a href="#" class="btn">Подробнее</a>
-			            <a href="#" class="btn">Забронировать</a>
-		            </div>
-		            <div class="rating">
-		                5 Звездочек :)
-		            </div>
-		            <div class="button">
-		                Рейтинг: 8,5
-		            </div>
-		        </section>
-	        </article>
-			<!--ITEM END-->
-			<hr>
-			<!--ITEM-->
-	        <article class="result-item">
-	            <section class="result-info">
-		            <div class="item-info">
-		                <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		                <h2>Desert Quail Inn</h2>
-		                <p>Мотель        От 2000 р.</p><!--Вопрос по оформлению цены Как лучше-->
-			            <a href="#" class="btn">Подробнее</a>
-			            <a href="#" class="btn">Забронировать</a>
-		            </div>
-		            <div class="rating">
-		                2 Звездочки :)
-		            </div>
-		            <div class="button">
-		                Рейтинг: 8,9
-		            </div>
-		        </section>
-	        </article>
-			<!--ITEM END-->
-			<hr>
-			<!--ITEM-->
-	        <article class="result-item">
-	            <section class="result-info">
-		            <div class="item-info">
-		                <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		                <h2>Villas At Poco Diablo</h2>
-		                <p>Апартаменты        От 4000 р.</p>
-			            <a href="#" class="btn">Подробнее</a>
-			            <a href="#" class="btn">Забронировать</a>
-		            </div>
-		            <div class="rating">
-		                3 Звездочки :)
-		            </div>
-		            <div class="button">
-		                Рейтинг: 9,2
-		            </div>
-		        </section>
-	        </article>
-			<!--ITEM END-->
-			<hr>
-	    </div>
-	
-	    <!--FOOTER-->
-	    <footer class="main-footer">
-	        <section class="main-footer-info">
-	            <div class="footer-tag">
-		            #VISITSEDONA
-		        </div>
-		        <div class="footer-social">
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-		        <div class="footer-copyright">
-		            Website by <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100" >
-		        </div>
-	        </section>
-	    </footer>
-	    <!--FOOTER END-->
-  
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Гостиница</title>
+</head>
+
+<body>
+    <!--HEADER-->
+    <header class="page-header">
+        <a class="image" href="./index.html">
+            <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+        </a>
+
+        <nav class="main-nav">
+            <ul>
+                <li>
+                    <a href="#" class="btn">Информация</a>
+                </li>
+                <li>
+                    <a href="#" class="btn">Фото и видео</a>
+                </li>
+
+                <li>
+                    <a href="#" class="btn">Карта штата</a>
+                </li>
+                <li>
+                    <a href="#" class="btn">Гостиницы</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--HEADER END-->
+
+    <main class="container clearfix">
+                    <!-- Главное окно - форма, блок фильтра поиска, результаты поиска -->
+            <form class="search-hotels-form clearfix" action="#" method="get">
+                <fieldset>
+                    <legend>Инфраструктура:</legend>
+                    <input name="arr-infrastructure[]" type="checkbox" id="checkbox-1" checked>
+                    <label for="checkbox-1">Бассейн</label>
+                    <input name="arr-infrastructure[]" type="checkbox" id="checkbox-2">
+                    <label for="checkbox-2">Парковка</label>
+                    <input name="arr-infrastructure[]" type="checkbox" id="checkbox-3">
+                    <label for="checkbox-3">Wi-Fi</label>
+                </fieldset>
+                <fieldset>
+                    <legend>Тип жилья:</legend>
+                    <input name="arr-type-property[]" type="checkbox" id="checkbox-4" checked>
+                    <label for="checkbox-4">Гостиница</label>
+                    <input name="arr-type-property[]" type="checkbox" id="checkbox-5" checked>
+                    <label for="checkbox-5">Мотель</label>
+                    <input name="arr-type-property[]" type="checkbox" id="checkbox-6" checked>
+                    <label for="checkbox-6">Апартаменты</label>
+                </fieldset>
+                <fieldset class="slider-form">
+                    <legend>Стоимость в сутки (р):</legend>
+                    <div class="wrapper-input">
+                        <input class="input-min" name="input-min" type="text" value="От 0">
+                        <input class="input-max" name="input-max" type="text" value="До 3000">
+                    </div>
+                    <div class="range">
+                        <div class="scale">
+                            <div class="bar"></div>
+                        </div>
+                        <div class="toggle min-toggle"></div>
+                        <div class="toggle max-toggle"></div>
+                    </div>
+                    <button type="submit">Показать</button>
+                </fieldset>
+            </form>
+
+            <div class="search-filter clearfix">
+                <div class="filter-left-wrapper clearfix">
+                    <h3 class="search-sum">Найдено: 3 </h3>
+                    <p class="sort">Сортировка:</p>
+                    <ul class="clearfix">
+                        <li class="search-filter-active">По цене</li>
+                        <li><a href="#">По типу</a></li>
+                        <li><a href="#">По рейтингу</a></li>
+                    </ul>
+                </div>
+                <div class="arrows clearfix">
+                    <a class="icon-up-dir" href="#">Up</a>
+                    <a class="icon-down-dir active-dir" href="#">Down</a>
+                </div>
+            </div>
+        <!--ITEM-->
+        <article class="result-item">
+            <section class="result-info">
+                <div class="item-info">
+                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                    <h2>Amara Resort & Spa</h2>
+                    <p>Гостиница От 3500 р.</p>
+                    <a href="#" class="btn">Подробнее</a>
+                    <a href="#" class="btn">Забронировать</a>
+                </div>
+                <div class="rating">
+                    5 Звездочек :)
+                </div>
+                <div class="button">
+                    Рейтинг: 8,5
+                </div>
+            </section>
+        </article>
+        <!--ITEM END-->
+        <!--ITEM-->
+        <article class="result-item">
+            <section class="result-info">
+                <div class="item-info">
+                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                    <h2>Desert Quail Inn</h2>
+                    <p>Мотель От 2000 р.</p>
+                    <!--Вопрос по оформлению цены Как лучше-->
+                    <a href="#" class="btn">Подробнее</a>
+                    <a href="#" class="btn">Забронировать</a>
+                </div>
+                <div class="rating">
+                    2 Звездочки :)
+                </div>
+                <div class="button">
+                    Рейтинг: 8,9
+                </div>
+            </section>
+        </article>
+        <!--ITEM END-->
+        <!--ITEM-->
+        <article class="result-item">
+            <section class="result-info">
+                <div class="item-info">
+                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                    <h2>Villas At Poco Diablo</h2>
+                    <p>Апартаменты От 4000 р.</p>
+                    <a href="#" class="btn">Подробнее</a>
+                    <a href="#" class="btn">Забронировать</a>
+                </div>
+                <div class="rating">
+                    3 Звездочки :)
+                </div>
+                <div class="button">
+                    Рейтинг: 9,2
+                </div>
+            </section>
+        </article>
+        <!--ITEM END-->
+    </main>
+    <!--FOOTER-->
+    <footer class="page-footer">
+        <div class="footer-tag">
+            #VISITSEDONA
+        </div>
+        <div class="footer-social">
+            <a class="socil-btn socil-btn-tw" href="#" target="_blank">Твитер</a>
+            <a class="socil-btn socil-btn-fb" href="#" target="_blank">Фейсбук</a>
+            <a class="socil-btn socil-btn-youtub" href="#" target="_blank">Ютьюб</a>
+        </div>
+        <div class="footer-copyright">
+            Website by
+            <a href="#" target="_blank"><img src="http://placehold.it/150x100" alt="Седона" width="150" height="100"></a>
+        </div>
+    </footer>
+    <!--FOOTER END-->
+
+</body>
+
 </html>
-  
